--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ DATABASE_PASSWORD = "123456789"
 DATABASE_HOST = "localhost"
 DATABASE_PORT = "5432"
 DATABASE_NAME = "postgres"
+SECRET_KEY = "Iv4GzW_D6HI8cAc2n-RPjv5m1xgryxfHp8mPnVdezow"
